--- a/css/tooplate-chilling-cafe.css
+++ b/css/tooplate-chilling-cafe.css
@@ -323,6 +323,12 @@ a {
 }
 
 @media (max-width: 430px) {
+  .tm-section {
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+  }
   .tm-responsive-table {
     overflow-x: auto;
   }
@@ -348,7 +354,7 @@ a {
   }
   th {
     padding: 0 5px 0 5px;
-    font-size: 1rem;
+    font-size: 12px;
   }
   td {
     font-size: 14px;
@@ -362,6 +368,12 @@ a {
   span.tm-item-price {
     margin: 1vh 0 2vh 0;
   }
+  .tm-text-left-0 {
+    width: 60%;
+  }
+  .tm-text-left-1 {
+    width: 70%;
+  }
 }
 @media (max-width: 320px) {
   .tm-section {
@@ -369,7 +381,6 @@ a {
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
-    width: 90%;
   }
   .tm-responsive-table {
     overflow-x: auto;
